convert delete buttons/links to rails 7 button_to with helper

--- a/app/views/accounts/bank/index.html.slim
+++ b/app/views/accounts/bank/index.html.slim
@@ -32,7 +32,7 @@ table
         td = account.level
         td = link_to 'Show', account
         td = link_to 'Edit', edit_account_path(account)
-        td = link_to 'Destroy', account, data: { confirm: 'Are you sure?' }, method: :delete
+        / td = link_to 'Destroy', account, data: { confirm: 'Are you sure?' }, method: :delete
 
 br
 
