--- a/app/assets/stylesheets/classic.css
+++ b/app/assets/stylesheets/classic.css
@@ -1,4 +1,5 @@
 .w100 {width:100%;}
+.tright {text-align: right!important;}
 
 ul.classic {
   list-style-type: disc;
@@ -12,6 +13,8 @@ ul.classic {
 .card-2{
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
 }
+
+.indent {margin-left:8px;}
 
 tbody.split-rows {display:none} 
 
@@ -99,7 +102,7 @@ table.gl-table {
 }
  
 .show-fields label, .form-fields label, .field label {
-   width: 20%;
+   width: 25%;
    display: inline-block !important;
    font-weight: bold;
    text-align: right;
@@ -187,47 +190,47 @@ table.gl-table {
 }
  .pl-row .pl-col-11 {
    display: inline-block;
-   width: calc(12% * 1);
+   width: calc(16% * 1);
    text-align: right;
 }
  .pl-row .pl-col-12 {
    display: inline-block;
-   width: calc(12% * 2);
+   width: calc(16% * 2);
    text-align: right;
 }
  .pl-row .pl-col-13 {
    display: inline-block;
-   width: calc(12% * 3);
+   width: calc(16% * 3);
    text-align: right;
 }
  .pl-row .pl-col-14 {
    display: inline-block;
-   width: calc(12% * 4);
+   width: calc(16% * 4);
    text-align: right;
 }
  .pl-row .pl-col-22 {
    display: inline-block;
-   width: calc(12% / 1);
+   width: calc(16% / 1);
    text-align: right;
 }
  .pl-row .pl-col-23 {
    display: inline-block;
-   width: calc(12% * 2);
+   width: calc(16% * 2);
    text-align: right;
 }
  .pl-row .pl-col-24 {
    display: inline-block;
-   width: calc(12% * 3);
+   width: calc(16% * 3);
    text-align: right;
 }
  .pl-row .pl-col-33 {
    display: inline-block;
-   width: calc(12% * 1);
+   width: calc(16% * 1);
    text-align: right;
 }
  .pl-row .pl-col-34 {
    display: inline-block;
-   width: calc(12% * 2);
+   width: calc(16% * 2);
    text-align: right;
 }
  .pl-row .pl-col-tot {
@@ -243,7 +246,7 @@ table.gl-table {
 }
  .pl-row .pl-col-tot-2 {
    display: inline-block;
-   width: 65%;
+   width: 75%;
    text-align: right;
 }
  .pl-row .pl-col-tot-3 {
@@ -261,6 +264,59 @@ table.gl-table {
   height:60vh;
   overflow: scroll;
 }
-.tright {
-  text-align: right;
+.annotate{
+  font-style: italic;
+  font-size: calc(0.5rem + 0.5vw);
+  line-height: calc(0.5rem + 0.5vw);
+  font-weight: normal;
+
 }
+/* nees to clean this up, most not used */
+.w1 {width: 1vw;}
+.w2 {width: 2vw;}
+.w3 {width: 3vw;}
+.w4 {width: 4vw;}
+.w5 {width: 5vw;}
+.w6 {width: 6vw;}
+.w7 {width: 7vw;}
+.w8 {width: 8vw;}
+.w9 {width: 9vw;}
+.w10 {width: 10vw;}
+.w11 {width: 11vw;}
+.w12 {width: 12vw;}
+.w13 {width: 13vw;}
+.w14 {width: 14vw;}
+.w15 {width: 15vw;}
+.w16 {width: 16vw;}
+.w17 {width: 17vw;}
+.w18 {width: 18vw;}
+.w19 {width: 19vw;}
+.w20 {width: 20vw;}
+.w22 {width: 22vw;}
+.w25 {width: 25vw;}
+.w30 {width: 30vw;}
+.w40 {width: 40vw;}
+.wp1 {width: 1%;}
+.wp2 {width: 2%;}
+.wp3 {width: 3%;}
+.wp4 {width: 4%;}
+.wp5 {width: 5%;}
+.wp6 {width: 6%;}
+.wp7 {width: 7%;}
+.wp8 {width: 8%;}
+.wp9 {width: 9%;}
+.wp10 {width: 10%;}
+.wp11 {width: 11%;}
+.wp12 {width: 12%;}
+.wp13 {width: 13%;}
+.wp14 {width: 14%;}
+.wp15 {width: 15%;}
+.wp16 {width: 16%;}
+.wp17 {width: 17%;}
+.wp18 {width: 18%;}
+.wp19 {width: 19%;}
+.wp20 {width: 20%;}
+.wp22 {width: 22%;}
+.wp25 {width: 25%;}
+.wp30 {width: 30%;}
+.wp40 {width: 40%;}
