--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -56,55 +56,12 @@
                 i class="fas fa-eye"
               = link_to edit_book_path(book) do
                 i class="fas fa-edit"
-              = link_to book, data: { confirm: 'Are you sure? This will destroy all Accounts, Entries, Spits, and Statements' }, method: :delete do
-                i class="fas fa-trash w3-text-red"
-
-            / td = link_to 'Show', book
-            / td = link_to 'Edit', edit_book_path(book)
-            / td = link_to 'Destroy', book, data: { confirm: 'Are you sure?' }, method: :delete
+              = destroyConfirmTag(book,
+                klass:"inline-block", 
+                confirm_msg:'Are you sure? This will destroy all Accounts, Entries, Spits, and Statements',
+                prompt:tag.i(class:"fas fa-trash w3-text-red"))
 
     br
 
     = link_to 'New Book Setup', books_setup_index_path, class:'blue-link-button round'
 
-
-
-/ h1 Listing books
-
-/ table
-/   thead
-/     tr
-/       th Name
-/       th Root
-/       th Assets
-/       th Equity
-/       th Liabilities
-/       th Income
-/       th Expenses
-/       th Checking
-/       th Savings
-/       th Settings
-/       th
-/       th
-/       th
-
-/   tbody
-/     - @books.each do |book|
-/       tr
-/         td = book.name
-/         td = book.root
-/         td = book.assets
-/         td = book.equity
-/         td = book.liabilities
-/         td = book.income
-/         td = book.expenses
-/         td = book.checking
-/         td = book.savings
-/         td = book.settings
-/         td = link_to 'Show', book
-/         td = link_to 'Edit', edit_book_path(book)
-/         td = link_to 'Destroy', book, data: { confirm: 'Are you sure?' }, method: :delete
-
-/ br
-
-/ = link_to 'New Book', new_book_path
