--- a/app/views/welcome/book.html.slim
+++ b/app/views/welcome/book.html.slim
@@ -1,8 +1,9 @@
+div[data-controller="blueBackground"]
 / .w3-container.min-height
-.w3-row.min-height
+.w3-row.min-height.bg-yellow-50.pb-48
   / [style="background-color:#ffffdd"]
   .w3-twothird.w3-padding
-    h2.text-lg.font-bold Welcome to RBooks
+    h2.text-lg.font-bold Welcome to MyBooks {aka rBooks, rCash, iCash}
     .show-fields
       .field
         label Current Book
@@ -33,7 +34,7 @@
     </small>
  
 
-  .w3-third
+  .w3-third.p-4
 
     - links = [["Bank Statements", bank_statements_path],\
                 ["Bank(OFX) Trans", latest_ofxes_path ],\
