--- a/app/views/welcome/home.html.slim
+++ b/app/views/welcome/home.html.slim
@@ -1,5 +1,5 @@
-/ .w3-container.min-height
-div[style="background-color:#ffffdd"]
+div[data-controller="blueBackground"]
+div[class="bg-yellow-50 pb-8"]
   .grid.grid-cols-3
     .p-3.col-span-2
       span.strong.text-xl Welcome to MyBooks 
