--- a/app/views/accounts/ledger/show.html.slim
+++ b/app/views/accounts/ledger/show.html.slim
@@ -6,18 +6,8 @@ div.bg-gray-300.grid.grid-cols-4.p-1
       button[class="ml-4 #{btnInfo}"]= link_to 'New Entry', new_entry_path(account_id:@account.id)
     - else
       span.strong Placeholder Account
-  div[ data-controller="toggleMenu"]
-    button[class="#{btnGreen}" data-action="click->toggleMenu#toggleMenu"] 
-      i.fa.fa-toggle-off  Duplicate Entry Search by Desc
-    div[class="z-10 absolute bg-green-200 w-1/3 px-2 hidden" data-toggleMenu-target="menu"]
-      div.p-4[data-autopickr-url-value="/entries/auto_search" 
-        data-controller="autopickr"
-        data-autopickr-slen-value="2"
-        ]
-        = render partial:"accounts/ledger/pickr"
-        div
-          = check_box_tag('contains','no', false,class:"w3-left mt-1", data:{autopickr_target:"contains"}) 
-          span.ml-3.align-top Use Contains Search
+  div
+    = render partial:'shared/ledger_pickr'
 
   div
     - if session[:recent][@account.id.to_s].present?
