--- a/app/views/vfw/deposits/month_summary.html.slim
+++ b/app/views/vfw/deposits/month_summary.html.slim
@@ -117,18 +117,18 @@
         p We have reviewed that attached Post ledgers, Bank Statements, Bills and Receipts are in accordance to Post, Departments and National By-Laws requirements. We certify those requirements have been met to the best of our knowledge and belief.
       .s1.w3-col
       p
-      .s4.w3-col
+      .s4.w3-col.mt-8
         p
         p
         p __________________________
         p Commander
-      .s4.w3-col
+      .s4.w3-col.mt-8
         p
         p
         p __________________________
         p Quartermaster
       
-      .s4.w3-col
+      .s4.w3-col.mt-8
         p
         p
         p __________________________
