--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -1,7 +1,7 @@
+/*
 .print {
    width: 9in;
    margin: 0 auto;
-   font-size: 1.9rem;
 }
  .print body {
    background-color: inherit;
@@ -25,8 +25,10 @@
  .fs8 {
    font-size: 80%;
 }
- @media print {
-   .page-break {
+*/
+@media print {
+
+  .page-break {
      page-break-after: always !important;
   }
    .top, .header {
@@ -36,8 +38,11 @@
      border: none;
   }
    body {
-     font-size: 8pt !important;
-     background-color: #fff;
+/*     font-size: 8pt !important;*/   
+    background-color: #fff;
+     width: 9in;
+     margin: 0 auto;
+
   }
    a[href]:after {
      content: none !important;
@@ -84,6 +89,10 @@
   }
    .hshrink {
      font-size: 5pt !important;
+  }
+  .profit-loss{
+    font-size: 7pt;
+
   }
 }
  .strong {
