change link colors on ofx page
blue new, green cleared

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -133,6 +133,14 @@ td.actions a, div.actions a {
    color: green;
 }
 
+.green-link {
+   color: green;
+}
+
+.green-link:hover {
+   color: blue;
+}
+
 .secondary-link {
    color: saddlebrown;
 }
